// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OuiHeaderLink can render as specific color 1`] = `
<button
  class="ouiButtonEmpty ouiButtonEmpty--danger ouiHeaderLink"
  type="button"
>
  <span
    class="ouiButtonContent ouiButtonEmpty__content"
  >
    <span
      class="ouiButtonEmpty__text"
    />
  </span>
</button>
`;

exports[`OuiHeaderLink is rendered 1`] = `
<button
  aria-label="aria-label"
  class="ouiButtonEmpty ouiButtonEmpty--text ouiHeaderLink testClass1 testClass2"
  data-test-subj="test subject string"
  type="button"
>
  <span
    class="ouiButtonContent ouiButtonEmpty__content"
  >
    <span
      class="ouiButtonEmpty__text"
    />
  </span>
</button>
`;

exports[`OuiHeaderLink is rendered as active 1`] = `
<button
  class="ouiButtonEmpty ouiButtonEmpty--primary ouiHeaderLink ouiHeaderLink-isActive"
  type="button"
>
  <span
    class="ouiButtonContent ouiButtonEmpty__content"
  >
    <span
      class="ouiButtonEmpty__text"
    />
  </span>
</button>
`;
